--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -10,7 +10,7 @@
 }
 
 .footer {
-    background-color: #1d39c4;
+    background-color: #0ca5a5;
     color: #fff;
     text-align: center;
     padding: 20px 40px;
