--- a/src/components/About_Company/ImageCard.css
+++ b/src/components/About_Company/ImageCard.css
@@ -13,9 +13,11 @@
     margin-left: 10px;
 
 }
+.image-card h5 {
+    margin-left: 10px;
+}
 
 .image-card p {
-    margin-top: 15px;
     margin-left: 10px;
 
 }
