--- a/src/components/AdminPanel/MajorClientsPanel.css
+++ b/src/components/AdminPanel/MajorClientsPanel.css
@@ -79,3 +79,46 @@ textarea {
 .clients-submit-btn:hover {
     background: #066868;
 }
+
+.client-list,
+.success-list {
+    list-style: none;
+    padding: 0;
+}
+
+.client-item,
+.success-item {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px;
+    border-bottom: 1px solid #ccc;
+    margin-bottom: 10px;
+}
+
+.client-image {
+    max-width: 100px;
+    height: auto;
+    border-radius: 5px;
+    margin-right: 20px;
+}
+
+.client-info,
+.success-info {
+    flex-grow: 1;
+}
+
+.delete-btn {
+    background-color: #ff4d4d;
+    color: #fff;
+    border: none;
+    padding: 8px 12px;
+    cursor: pointer;
+    border-radius: 5px;
+    transition: background-color 0.3s;
+}
+
+.delete-btn:hover {
+    background-color: #e60000;
+}
+
